@@ -15,66 +15,48 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
-
 public class SecurityConfig {
 
-    @Value("${app.cors.allowed-origins:http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173,http://127.0.0.1:5173,http://localhost:5175,http://127.0.0.1:5175}")
+    @Value("${app.cors.allowed-origins}")
     private String allowedOrigins;
 
     @Bean
-    public SecurityFilterChain
-    securityFilterChain(HttpSecurity http)
-            throws Exception {
-
-
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
                 .sessionManagement(management ->
-                management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                        management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(Authorize->
                         Authorize.requestMatchers("/api/**").authenticated()
-                                .requestMatchers("/api/super-admin/**")
-                                .hasRole("ADMIN")
+                                .requestMatchers("/api/super-admin/**").hasRole("ADMIN")
                                 .anyRequest().permitAll()
-                ).addFilterBefore(new JwtValidator(),
-                        BasicAuthenticationFilter.class)
+                ).addFilterBefore(new JwtValidator(), BasicAuthenticationFilter.class)
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(
-                        cors -> cors.configurationSource(corsConfigurationSource())
-                ).build();
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .build();
     }
-
-
-
 
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-
-
-
-private CorsConfigurationSource corsConfigurationSource() {
-    return new CorsConfigurationSource() {
-        @Override
-        public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-
+    private CorsConfigurationSource corsConfigurationSource() {
+        return request -> {
             CorsConfiguration cfg = new CorsConfiguration();
-            cfg.setAllowedOrigins(Arrays.stream(allowedOrigins.split(","))
+            // FIX: use OriginPatterns to support https://*.vercel.app
+            cfg.setAllowedOriginPatterns(Arrays.stream(allowedOrigins.split(","))
                     .map(String::trim)
                     .filter(origin -> !origin.isEmpty())
                     .toList());
-            cfg.setAllowedMethods(Collections.singletonList("*"));
+            cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS","PATCH"));
+            cfg.setAllowedHeaders(List.of("*"));
+            cfg.setExposedHeaders(List.of("Authorization"));
             cfg.setAllowCredentials(true);
-            cfg.setAllowedHeaders(Collections.singletonList("*"));
-            cfg.setExposedHeaders(Arrays.asList("Authorization"));
             cfg.setMaxAge(3600L);
             return cfg;
-        }
-    };
-
-  }
+        };
+    }
 }
